# TSV_editor

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/tsv-editor/: AppViewer.cpp  AppViewer.h  CMakeLists.txt  FilesController.h  TSVFilesHandler.cpp  TSVFilesHandler.h  TSVSortFilterProxyModel.cpp  TSVSortFilterProxyModel.h  TSVTable.cpp  TSVTable.h  TSVTableModel.cpp  TSVTableModel.h  TSVTableView.cpp  TSVTableView.h
test/: CMakeLists.txt  Test_TSVFilesHandler.cpp  Test_TSVTable.cpp  Test_TSVTableModel.cpp  testUtilities.cpp  testUtilities.h
